Add add() Function

--- a/test/index.html
+++ b/test/index.html
@@ -6,31 +6,40 @@
 <body>
 <script type="text/javascript" src="../src/validator.js"></script>
 <script type="text/javascript">
-var person = {
+var validator = new Validator(),
+    person = {
       name: 'Peter',
       phone: '12345678900',
       email: 'peter@example.com',
       age: 24,
       gendar: 'male',
       hobbies: ['coding', 'singing', 'movies'],
-      studentId: 12345678,
+      studentId: 'X2345678',
+      contact: '',
+      smilie: '{doge}',
     },
     rules = {
       name:'required|string',
       phone: 'string|size:11',
       email: 'required_without:phone|email',
       gendar: 'in:male,female',
-      age: 'integer|between:0,120',
+      age: 'integer|between:0,120|older_than:17',
       hobbies: 'array',
-      studentId: 'integer|digits:8',
+      studentId: 'alpha_num|size:8',
+      contact: 'required_without:phone,email',
+      smilie: 'regex:^{([a-z]*)}$',
     };
+
+validator.add('older_than', function (value, age) {
+  return value > age;
+});
 
 document.write('Object to be tested:<br>');
 document.write(JSON.stringify(person) + '<br>');
 document.write('Validation rules:<br>');
 document.write(JSON.stringify(rules) + '<br>');
 document.write('Result:<br>');
-document.write(JSON.stringify(new Validator(person).validate(rules)));
+document.write(JSON.stringify(validator.validate(person, rules)));
 </script>
 </body>
 </html>
